<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_margin"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="150dp"
            android:layout_height="136dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_image_black_24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginBottom="@dimen/small_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/nama"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="184dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/stock" />

                <TextView
                    android:id="@+id/tv_stock"
                    android:layout_width="56dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/stocks"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>